--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset01"
-                    scale="0.12460827182843157 0.12460827182843157 0.12460827182843157"
+                    scale="1.0 1.0 1.0"
                     gps-entity-place="latitude: 48.088055; longitude: 11.153212;"
                 ></a-entity>
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset02"
-                    scale="0.12460827182843157 0.12460827182843157 0.12460827182843157"
+                    scale="1.0 1.0 1.0"
                     gps-entity-place="latitude: 48.088611; longitude: 11.152721;"
                 ></a-entity>
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset03"
-                    scale="0.12460827182843157 0.12460827182843157 0.12460827182843157"
+                    scale="1.0 1.0 1.0"
                     gps-entity-place="latitude: 48.08891; longitude: 11.15243;"
                 ></a-entity>
 
